# kuda_service

./: .dockerignore  .gitignore  README.md  docker-compose.test.yml  docker-compose.yml  test_file.txt
backend/: .env.template  Dockerfile  docker-compose.yml  old_Dockerfile  pyproject.toml  requirements.txt
backend/app/: .coveragerc  Dockerfile  Dockerfile_test  auth_route.py  auth_service.py  config.py  crud.py  database.py  exceptions.py  main.py  models.py  pyproject.toml  requirements.txt  response_service.py  schemas.py  test_database.py  wait-for-postgres.sh
backend/app/alembic/: env.py
backend/app/alembic/versions/: 2024_07_20_1612-a636c85e8ac3_init.py  (+13 more)
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  (+5 more)
backend/app/crud/: car_crud.py  message_crud.py  point_crud.py  review_crud.py  tag_crud.py  trip_crud.py  trip_tag_crud.py  trip_user_crud.py  user_crud.py
backend/app/models/: __init__.py  base.py  car_model.py  db_helper.py  message_model.py  point_model.py  review_model.py  tag_model.py  test_model.py  trip_model.py  trip_tag_model.py  trip_user_model.py  user_model.py
backend/app/routes/: auth_route.py  google_auth_route.py  map_routes.py  trip_route.py
backend/app/schemas/: car_scheme.py  filter_scheme.py  message_scheme.py  point_scheme.py  review_scheme.py  tag_scheme.py  trip_scheme.py  user_scheme.py
backend/app/services/: auth_service.py  car_service.py  geocoder_service.py  map_service.py  response_service.py  tag_service.py  translate_service.py  trip_service.py
backend/app/tests/: test_auth.py  test_google_auth.py
(+60 files in other folders)
