[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Danila Tretiakov <d.tretiakov@innopolis.university>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
pydantic-settings = "^2.3.4"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic = {extras = ["email"], version = "^2.8.2"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
asyncpg = "^0.29.0"
python-dotenv = "^1.0.1"
alembic = "^1.13.2"
deep-translator = "^1.11.4"
bcrypt = "^4.1.3"
aioredis = "^2.0.1"
redis = "^5.0.7"
pytest = "^8.3.0"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.8"
coverage = "^7.6.0"
datetime = "^5.5"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

